--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,3 +1,8 @@
+a{
+    color: gray;
+    text-decoration: none;
+}
+
 .nav{
     background:whitesmoke;
     margin-bottom: 5px;
@@ -20,5 +25,15 @@
 
 textarea{
     width: 100%;
-    min-height: 100px;
+    min-height: 150px;
 }
+
+#compilePrev{
+    width: 90%;
+    height: 300px;
+}
+
+footer{
+    font-size: small;
+}
+
