--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ a{
 
 .nav{
     background:whitesmoke;
-    margin-bottom: 5px;
+    /* margin-bottom: 5px; */
     padding: 5px;
 }
 
@@ -20,13 +20,17 @@ a{
 
 #compile{
     width: 39%;
-    float: left;
+    /* float: left; */
 }
+
+/* #auto {
+    display: inline-block;
+} */
 
 #properties,
 #code{
     width: 60%;
-    float: right;
+    /* float: right; */
 }
 
 textarea{
@@ -79,7 +83,7 @@ footer{
 }
 
 details {
-    margin: 5px 5px 5px 0px;
+    margin: 5px 0px 5px 0px;
     padding: 5px;
     background: rgb(250, 250, 250);
     box-shadow: 1px 1px 1px 1px rgba(129, 129, 129, 0.4);
@@ -89,11 +93,11 @@ summary {
     margin: 5px;
 }
 
-#axis{
+/* #axis{
     width: 100%;
     max-height: 200px;
     overflow-y: scroll;
-}
+} */
 
 #series .seriesitem div{
     display: inline;
