--- a/css/drag.css
+++ b/css/drag.css
@@ -11,7 +11,7 @@
 [class^="panel"] {
     padding: 12px 12px;
     /* background-color: whitesmoke; */
-    max-height:500px;
+    /* max-height:500px; */
     overflow-y: scroll;
 }
 .panel-one {
