--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ a{
 #extlinks{
     float: right;
     text-align: right;
+    margin-right: 10px;             /* fix temp */
 }
 
 .container{
@@ -216,4 +217,18 @@ input[type=checkbox]:disabled:after {
     /* content: "a";
     text-align: center;
     color: black; */
+}
+
+.split, .gutter.gutter-horizontal {
+    float: left;
+    height: 500px;
+}
+.gutter.gutter-horizontal {
+    cursor: col-resize;
+}
+
+.split {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
