--- a/main.css
+++ b/main.css
@@ -226,8 +226,15 @@ input[type=checkbox]:disabled:after {
     color: black; */
 }
 
+/* 
+@media screen and (min-width: 768px) {
+    .split{
+        float: left;
+        height: 575px;
+    }
+} */
 
-.split, .gutter.gutter-horizontal {
+.gutter.gutter-horizontal {
     float: left;
     height: 575px;
 }
@@ -242,12 +249,7 @@ input[type=checkbox]:disabled:after {
     width: 300px;
 } */
 
-.split {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
 #panel-three{
     overflow-x:hidden;
 }
+
