--- a/main.css
+++ b/main.css
@@ -62,13 +62,18 @@ textarea{
 }
 
 #compileBtn{
-    width: 100%;
+    width: calc(100% - 2px);
 }
 
 #compilePrev{
-    width: calc(100% - 3px);
+    width: calc(100% - 5px);
     height: 300px;
+    margin-bottom: 2px;
 }
+
+/* #compileBtn,#compilePrev{
+    margin: 0px 5px;
+} */
 
 footer{
     font-size: small;
@@ -110,7 +115,7 @@ footer{
 }
 
 details {
-    margin: 5px 0px 5px 0px;
+    margin: 0px 2px 5px 0px;
     padding: 5px;
     background: rgb(250, 250, 250);
     box-shadow: 1px 1px 1px 1px rgba(129, 129, 129, 0.4);
