--- a/res/view/view.html
+++ b/res/view/view.html
@@ -8,7 +8,7 @@
 </head>
 <style>
     .wrap{
-        padding: 100px;
+        padding: 40px;
         perspective: 0;
     }
 
@@ -48,8 +48,8 @@
     <div class="wrap">
         <div id="cube">
             <div class="front">z</div>
-            <div class="left">x</div>
-            <div class="bottom">y</div>
+            <div class="left">y</div>
+            <div class="bottom">x</div>
         </div>
     </div>
 </body>
