--- a/main.css
+++ b/main.css
@@ -62,14 +62,28 @@ textarea{
 }
 
 #compileBtn{
-    width: calc(100% - 2px);
+    width: calc(100%);
+    border: solid green;
+    border-width: 1.5px 1.5px 0px 1.5px;
+    background-color: transparent;
+    color: green;
+    padding: 5px;
+    border-radius: 10px 10px 0px 0px;
+    font-weight: bold;
+}
+
+#compileBtn:hover {
+    background-color: green;
+    color: white;
 }
 
 #stylePrev,
 #compilePrev{
-    width: calc(100% - 5px);
+    width: calc(100% - 3px);
     height: 300px;
     margin-bottom: 2px;
+    border-radius: 0px 0px 10px 10px;
+    border: 1.5px solid green;
 }
 
 /* #compileBtn,#compilePrev{
@@ -116,10 +130,11 @@ footer{
 }
 
 details {
-    margin: 0px 2px 5px 0px;
-    padding: 5px;
+    margin: 0px 2px 10px 0px;
+    padding: 10px;
     background: rgb(250, 250, 250);
     box-shadow: 1px 1px 1px 1px rgba(129, 129, 129, 0.4);
+    border-radius: 10px;
 }
 
 summary {
