--- a/main.css
+++ b/main.css
@@ -277,6 +277,7 @@ summary {
 
 #series .upBut,
 #series .deleteBut,
+#series .transposeBut,
 input[type=checkbox] {
     box-sizing: border-box;
     width: 17pt;
